--- a/App/Learnova/Components/Pages/Classes/Classes.razor
+++ b/App/Learnova/Components/Pages/Classes/Classes.razor
@@ -21,7 +21,7 @@
                             <MudText  Class="d-inline  pl-4" Typo="Typo.h5">@c.CodicePianoStudioNavigation.CodiceIndirizzoNavigation.Nome</MudText>
                         </MudItem>
                         <MudItem xs="8">
-                            <MudText Typo="Typo.h6">Studenti @c.Studentis.Count:</MudText>
+                            <MudText Typo="Typo.h6">Studenti: @c.Studentis.Count</MudText>
                         </MudItem>
                         <MudItem Class="object-right" xs="1">
                             <MudIcon  Icon="@Icons.Material.Filled.ArrowForwardIos"></MudIcon>
