--- a/App/Learnova/Components/Pages/Classes/Students.razor
+++ b/App/Learnova/Components/Pages/Classes/Students.razor
@@ -19,7 +19,7 @@
                 {
                     <MudListItem T="Studenti" @onclick="() => SelectStudent(s)" Class="student-item">
                         <MudGrid>
-                            <MudItem xs="11"> 
+                            <MudItem xs="10"> 
                                 <MudAvatar Color="Color.Primary" Size="Size.Large" Class="mud-avatar-text">
                                     @($"{(string.IsNullOrEmpty(s.Cognome) ? "" : s.Cognome[0])}{(string.IsNullOrEmpty(s.Nome) ? "" : s.Nome[0])}".ToUpper())
                                 </MudAvatar>
@@ -32,6 +32,9 @@
                                     Mostra Voti
                                 </MudText>
                                 <MudIcon Class="object-right" Icon="@Icons.Material.Filled.KeyboardArrowRight" Color="Color.Default"/>
+                            </MudItem>
+                            <MudItem xs="1">
+                                <MudButton OnClick="@(()=> NavigationManager.NavigateTo($"/Attendance/{@s.Cf}"))">Vedi assenze</MudButton>
                             </MudItem>
                         </MudGrid>
                     </MudListItem>
