--- a/App/Learnova/Components/Pages/Classes/Classes.razor
+++ b/App/Learnova/Components/Pages/Classes/Classes.razor
@@ -7,7 +7,7 @@
 
 <MudContainer>
     <MudPaper Class="my-2 py-3 px-3">
-        <MudText Typo="Typo.h3">Le @(User.CodiceRuolo==2? "tue":"") classi</MudText>
+        <MudText Typo="Typo.h3">Le @(User.CodiceRuolo==2? "tue":"") Classi</MudText>
     </MudPaper>
     <MudDivider></MudDivider>
     <MudPaper>
