--- a/App/Learnova/Components/Pages/Classes/Students.razor
+++ b/App/Learnova/Components/Pages/Classes/Students.razor
@@ -14,12 +14,11 @@
         <MudList T="Studenti" Dense="true">
             @foreach (var s in studenti.OrderBy(x => x.Cognome))
             {
-                //aaaaaNot following the DRY rule...
                 if (User.CodiceRuolo <=2)
                 {
                     <MudListItem T="Studenti" @onclick="() => SelectStudent(s)" Class="student-item">
                         <MudGrid>
-                            <MudItem xs="10"> 
+                            <MudItem xs="9"> 
                                 <MudAvatar Color="Color.Primary" Size="Size.Large" Class="mud-avatar-text">
                                     @($"{(string.IsNullOrEmpty(s.Cognome) ? "" : s.Cognome[0])}{(string.IsNullOrEmpty(s.Nome) ? "" : s.Nome[0])}".ToUpper())
                                 </MudAvatar>
@@ -35,6 +34,9 @@
                             </MudItem>
                             <MudItem xs="1">
                                 <MudButton OnClick="@(()=> NavigationManager.NavigateTo($"/Attendance/{@s.Cf}"))">Vedi assenze</MudButton>
+                            </MudItem>
+                            <MudItem xs="1">
+                                <MudButton OnClick="@(()=> NavigationManager.NavigateTo($"/Notes/{@s.Cf}"))">Vedi note</MudButton>
                             </MudItem>
                         </MudGrid>
                     </MudListItem>
